# docker-fastapi-celery-redis

./: .gitignore  docker-compose.yml
api/: Dockerfile  freeze.txt  pyproject.toml
celery-queue/: Dockerfile  freeze.txt  pyproject.toml
flower/: Dockerfile  README.md  freeze.txt  pyproject.toml
