[project]
name = "flower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.0",
    "redis>=5.2.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "flower",
]

[tool.uv.sources]
flower = { workspace = true }
